# qrcode-wasm

./: .travis.yml  Cargo.toml  default.nix  index.html
nix/: cargo-ruukh.nix  nixpkgs.nix  wasm-bindgen-cli.nix
src/: lib.rs
static/: qrcode_wasm.js  qrcode_wasm.wasm  qrcode_wasm_bg.wasm
